hphp/hack/test/typecheck/reactive/test_obj_set3.php.exp
File "test_obj_set3.php", line 10, characters 3-17:
Cannot append to a Hack Collection object in a reactive context. Instead, use the `add` method. (Typing[4201])
